# robust-registration

./: LICENSE.txt  MANIFEST.in  README.md  demo_robust_registration.ipynb  requirements.txt  setup.cfg
xregistration/: __init__.py  est_catalog.py  estimation.py  simulation.py
