[metadata]
name = xregistration
version = 0.0.2
description = Robust astrometric registration and cross-match of astronomical catalogs.
long_description = file: README.md
long_description_content_type = text/markdown
author = Richard L. White
author_email = rlw@stsci.edu
url = https://github.com/rlwastro/robust-registration
license_files = LICENSE.txt
platform = OS Independent
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python

[options]
packages = xregistration
python_requires = >=3.5
install_requires =
  requests
  numpy
  pandas
  astropy
  tqdm
zip_safe = False
